fix background image resizing on mobile because of nav bar

--- a/src/index.css
+++ b/src/index.css
@@ -153,10 +153,13 @@ a {
 }
 
 .background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  z-index: -1;
 }
 
 .boxed {
